--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #121212;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* CSS file */
+
+@keyframes initialZoomIn {
+  0% {
+    transform: scale(1.05); /* Start slightly zoomed in */
+  }
+  100% {
+    transform: scale(1); /* End at normal size */
+  }
+}
+
+.lazy-img {
+  background: #f0f0f0; /* Placeholder color */
+  filter: blur(10px);
+  transition: filter 0.3s ease-out;
+}
+
+.lazy-img-loaded {
+  filter: blur(0);
 }
